# fast-api-airguardian

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  pyproject.toml  test_ssh.md
.github/workflows/: python-test.yml
migrations/: env.py
migrations/versions/: 3c95c9a2afd0_initial_schema_with_not_null_constraints.py
postman/globals/: workspace.postman_globals.json
src/fast_api_airguardian/: celery.py  create_tables.py  database.py  main.py  model.py  schemas.py  settings.py  task.py
tests/: conftest.py  test_nfz.py
