[project]
name = "fast-api-airguardian"
version = "0.1.0"
description = ""
authors = [
    {name = "hahamdan",email = "hahamdan@student.hive.fi"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "fast_api_airguardian", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
